[package]
name = "seek-finder"
description = "No-nonsense grep-like tool."
readme = "README.md"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "seek"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
colored = "3.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
